Tue Jun 12 02:35:24 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* lit.c (Lit_DumpPool): Convert late defined integer symbol value into
	floating point value when used as floating point literal.
	* regression/tests_pass/fpe_literal.s: Enhance test case.

Fri Jun  8 01:09:17 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	Based on https://www.riscosopen.org/content/sales/dde-changes-20-to-21
	* area.h: Add info AOF area attribute bit 31
	* symbol.h: Add info on AOF symbol attribute bit 13.

Fri May 18 20:46:41 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputEnvSub): Remove.
	(Input_ArgSub): No longer call inputEnvSub.  Simplify.
	* filename.c (FN_AnyToNative): Resolve RISC OS OS variable use in
	filenames on non-RISC OS platforms.
	* directive_file.c (c_get, c_lnk): Fix memory leak.

Fri May 18 18:28:20 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (c_macro): Prevent dollar expansion between vertical bar
	characters.
	* regression/tests_pass/variable_substitution.s: Enhance test.

Fri May 18 15:47:53 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpumem.c (dstreglist): Fix compiler warning.

Sat Apr  7 15:39:45 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* README: Add v2.00 testers.  Updated contributors list.

Thu Apr  5 02:02:54 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* README: Tune credits, release info and add "Future development"
	section.

Thu Apr  5 01:05:32 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am, output.h (GCCSDK_REVISION): Add svn branch.

Wed Apr  4 23:56:17 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/include/load_literal_basic.s: Removed the MOVT
	optimisation tests.
	* regression/tests_pass/load_literal3.s: Likewise.
	* m_cpumem.c (DestMem_RelocUpdater): Removed MOVT optimisation.
	(m_push, m_pop): Add comments.
	(CPUMem_ConstantInMOVT): Removed.
	* m_cpumem.h (CPUMem_ConstantInMOVT): Removed.